--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:textSize="17sp" />
 
     <TextView
+        android:text="result: "
         android:id="@+id/output"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
